force-app/main/default/objects/Company_Property__c/Company_Property__c.object-meta.xml
<CustomObject>
    <description>ID# for:
Mobilie devices - last 5 digits of the IMEI#
CC - last 4 digits of CC</description>
    <label>Company Property</label>
    <nameField>
        <label>ID #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Company Property</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>