force-app/main/default/objects/Company_Property__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter the employees name that this item is assigned to.  The Date Assigned and returned should be entered as a note in the Notes and Attachment section</inlineHelpText>
    <label>Assigned To (Employee)</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Company Property</relationshipLabel>
    <relationshipName>Company_Property</relationshipName>
    <type>Lookup</type>
</CustomField>