force-app/main/default/objects/Company_Property__c/fields/Currently_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Currently_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Currently Assigned</label>
    <type>Checkbox</type>
</CustomField>