force-app/main/default/objects/Company_Property__c/fields/Date_in_Service__c.field-meta.xml
<CustomField>
    <fullName>Date_in_Service__c</fullName>
    <label>Date in Service</label>
    <type>Date</type>
</CustomField>