force-app/main/default/objects/Company_Property__c/fields/End_Date_of_Plan__c.field-meta.xml
<CustomField>
    <fullName>End_Date_of_Plan__c</fullName>
    <label>End Date of Plan</label>
    <type>Date</type>
</CustomField>