force-app/main/default/objects/Company_Property__c/fields/Fuel_Company__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Company__c</fullName>
    <label>Fuel Company</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BP</fullName>
            </value>
            <value>
                <fullName>Shell</fullName>
            </value>
            <value>
                <fullName>Caltex</fullName>
            </value>
            <value>
                <fullName>IOR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>