force-app/main/default/objects/Company_Property__c/fields/IMEI__c.field-meta.xml
<CustomField>
    <fullName>IMEI__c</fullName>
    <label>IMEI #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>