force-app/main/default/objects/Company_Property__c/fields/Key_Type__c.field-meta.xml
<CustomField>
    <fullName>Key_Type__c</fullName>
    <inlineHelpText>only applies to Roma office and workshop keys issued by Maranoa locksmiths...  starts with TT3</inlineHelpText>
    <label>Key Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-Master/Red (9)</fullName>
            </value>
            <value>
                <fullName>1-Office/Yellow (10)</fullName>
            </value>
            <value>
                <fullName>2-Supervisors/Green (4)</fullName>
            </value>
            <value>
                <fullName>3-Accounts/Blue (1)</fullName>
            </value>
            <value>
                <fullName>4-Truck Drivers/Orange (12)</fullName>
            </value>
            <value>
                <fullName>5-Camp/Black (6)</fullName>
            </value>
            <value>
                <fullName>6-Rig/Orange (6)</fullName>
            </value>
            <value>
                <fullName>7-Workshop/Blue(6)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>