force-app/main/default/objects/Company_Property__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Brisbane</fullName>
            </value>
            <value>
                <fullName>Camp (Roma Yard)</fullName>
            </value>
            <value>
                <fullName>Jackson</fullName>
            </value>
            <value>
                <fullName>Roma</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>