force-app/main/default/objects/Company_Property__c/fields/Monthly_Payment__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Payment__c</fullName>
    <label>Monthly Payment ($)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>