force-app/main/default/objects/Company_Property__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <inlineHelpText>Provide any useful information in relation to company property</inlineHelpText>
    <label>Notes</label>
    <length>30</length>
    <type>Text</type>
</CustomField>