force-app/main/default/objects/Company_Property__c/fields/Purchase_from__c.field-meta.xml
<CustomField>
    <fullName>Purchase_from__c</fullName>
    <label>Purchase From</label>
    <type>TextArea</type>
</CustomField>