force-app/main/default/objects/Company_Property__c/fields/Purchased_By__c.field-meta.xml
<CustomField>
    <fullName>Purchased_By__c</fullName>
    <label>Purchased By</label>
    <length>30</length>
    <type>Text</type>
</CustomField>