force-app/main/default/objects/Company_Property__c/fields/Second__c.field-meta.xml
<CustomField>
    <fullName>Second__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employees</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Company Property (Employees)</relationshipLabel>
    <relationshipName>Company_Property1</relationshipName>
    <type>Lookup</type>
</CustomField>