force-app/main/default/objects/Company_Property__c/fields/Serial__c.field-meta.xml
<CustomField>
    <fullName>Serial__c</fullName>
    <label>Serial #</label>
    <type>TextArea</type>
</CustomField>