force-app/main/default/objects/Company_Property__c/fields/Sim__c.field-meta.xml
<CustomField>
    <fullName>Sim__c</fullName>
    <label>Sim #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>