force-app/main/default/objects/Company_Property__c/fields/Sim_Pin__c.field-meta.xml
<CustomField>
    <fullName>Sim_Pin__c</fullName>
    <label>Sim Pin</label>
    <length>10</length>
    <type>Text</type>
</CustomField>