force-app/main/default/objects/Company_Property__c/fields/Sim_Puk__c.field-meta.xml
<CustomField>
    <fullName>Sim_Puk__c</fullName>
    <label>Sim Puk #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>