force-app/main/default/objects/Company_Property__c/fields/Start_Date_of_Plan__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_of_Plan__c</fullName>
    <label>Start Date of Plan</label>
    <type>Date</type>
</CustomField>