force-app/main/default/objects/Company_Property__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Currently Assigned (In Use)</fullName>
            </value>
            <value>
                <fullName>Inactive (Not in Use)</fullName>
            </value>
            <value>
                <fullName>Obsolete (Binned/Sold)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>