force-app/main/default/objects/Company_Property__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internet Stick - 4G (T-Aircard)</fullName>
            </value>
            <value>
                <fullName>Ipad</fullName>
            </value>
            <value>
                <fullName>Ipad Pro</fullName>
            </value>
            <value>
                <fullName>Iphone 4</fullName>
            </value>
            <value>
                <fullName>Iphone 5</fullName>
            </value>
            <value>
                <fullName>Iphone 6</fullName>
            </value>
            <value>
                <fullName>Iphone 6+</fullName>
            </value>
            <value>
                <fullName>Iphone 6S+</fullName>
            </value>
            <value>
                <fullName>Iphone 7</fullName>
            </value>
            <value>
                <fullName>Iphone SE</fullName>
            </value>
            <value>
                <fullName>Laptop</fullName>
            </value>
            <value>
                <fullName>Nokia</fullName>
            </value>
            <value>
                <fullName>PC</fullName>
            </value>
            <value>
                <fullName>Samsung</fullName>
            </value>
            <value>
                <fullName>Sat Phone</fullName>
            </value>
            <value>
                <fullName>Mini Mac</fullName>
            </value>
            <value>
                <fullName>Iphone 8</fullName>
            </value>
            <value>
                <fullName>Iphone 8+</fullName>
            </value>
            <value>
                <fullName>Iphone XR</fullName>
            </value>
            <value>
                <fullName>Iphone XS Plus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>