force-app/main/default/objects/Company_Property__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Company property can be assigned to a Unit, Asset or Employee</inlineHelpText>
    <label>Assigned To (WD Unit)</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Company Property</relationshipLabel>
    <relationshipName>Company_Property</relationshipName>
    <type>Lookup</type>
</CustomField>