force-app/main/default/objects/Company_Property__c/fields/Water_Key_Type__c.field-meta.xml
<CustomField>
    <fullName>Water_Key_Type__c</fullName>
    <label>Water Key Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Roma Potable Water</fullName>
            </value>
            <value>
                <fullName>Roma Truck Wash</fullName>
            </value>
            <value>
                <fullName>Western Downs (Standpipe)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>