force-app/main/default/objects/Company_Property__c/fields/WD_Asset__c.field-meta.xml
<CustomField>
    <fullName>WD_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sometimes an item may be assigned to a particular vehicle or asset instead of an actual person.</description>
    <inlineHelpText>Enter the WD Asset that this item is assigned to.  The Date Assigned and returned should be entered as a note in the Notes and Attachment section</inlineHelpText>
    <label>Assigned To (WD Asset)</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Company Property</relationshipLabel>
    <relationshipName>Company_Property</relationshipName>
    <type>Lookup</type>
</CustomField>