force-app/main/default/objects/Company_Property__c/recordTypes/Computers.recordType-meta.xml
<RecordType>
    <fullName>Computers</fullName>
    <active>true</active>
    <label>Computers</label>
</RecordType>