force-app/main/default/objects/Company_Property__c/recordTypes/Fuel_Cards.recordType-meta.xml
<RecordType>
    <fullName>Fuel_Cards</fullName>
    <active>true</active>
    <label>Fuel Cards</label>
</RecordType>