force-app/main/default/objects/Company_Property__c/recordTypes/Fuel_Tags.recordType-meta.xml
<RecordType>
    <fullName>Fuel_Tags</fullName>
    <active>true</active>
    <label>Fuel Tags</label>
</RecordType>