force-app/main/default/objects/Company_Property__c/recordTypes/Keys.recordType-meta.xml
<RecordType>
    <fullName>Keys</fullName>
    <active>true</active>
    <label>Keys</label>
</RecordType>