force-app/main/default/objects/Company_Property__c/recordTypes/Mobile_Devices.recordType-meta.xml
<RecordType>
    <fullName>Mobile_Devices</fullName>
    <active>true</active>
    <label>Mobile Devices</label>
</RecordType>