force-app/main/default/objects/Company_Property__c/recordTypes/Vehicle_Keys.recordType-meta.xml
<RecordType>
    <fullName>Vehicle_Keys</fullName>
    <active>true</active>
    <label>Vehicle Keys</label>
</RecordType>