force-app/main/default/objects/Company_Property__c/recordTypes/Water_Keys.recordType-meta.xml
<RecordType>
    <fullName>Water_Keys</fullName>
    <active>true</active>
    <label>Water Keys</label>
</RecordType>