force-app/main/default/objects/Company_Property__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Currently_Assigned__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>WD_Asset__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Company Property Register</label>
    <sharedTo>
        <group>Finance</group>
        <group>HR</group>
        <group>Managing_Director</group>
        <group>OPs_super</group>
    </sharedTo>
</ListView>