force-app/main/default/objects/Company_Property__c/listViews/Fuel_Card_Register.listView-meta.xml
<ListView>
    <fullName>Fuel_Card_Register</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Fuel_Company__c</columns>
    <columns>Currently_Assigned__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>WD_Asset__c</columns>
    <columns>Unit__c</columns>
    <columns>Expiry_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Company_Property__c.Fuel_Cards</value>
    </filters>
    <label>Fuel Card Register</label>
    <sharedTo>
        <group>Finance</group>
        <group>HR</group>
    </sharedTo>
</ListView>