force-app/main/default/objects/Company_Property__c/listViews/Fuel_Tag_Register.listView-meta.xml
<ListView>
    <fullName>Fuel_Tag_Register</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Currently_Assigned__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>WD_Asset__c</columns>
    <columns>Fuel_Company__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Company_Property__c.Fuel_Tags</value>
    </filters>
    <filters>
        <field>Fuel_Company__c</field>
        <operation>equals</operation>
        <value>IOR</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Obsolete (Binned/Sold)</value>
    </filters>
    <label>Fuel Tag Register</label>
    <sharedTo>
        <group>Finance</group>
        <group>HR</group>
        <group>Managing_Director</group>
        <group>OPs_super</group>
    </sharedTo>
</ListView>