force-app/main/default/objects/Company_Property__c/listViews/Key_Register_All.listView-meta.xml
<ListView>
    <fullName>Key_Register_All</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Location__c</columns>
    <columns>Description__c</columns>
    <columns>Key_Type__c</columns>
    <columns>Currently_Assigned__c</columns>
    <columns>Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Company_Property__c.Keys</value>
    </filters>
    <filters>
        <field>Location__c</field>
        <operation>equals</operation>
        <value>Roma,Brisbane,Camp (Roma Yard),Jackson</value>
    </filters>
    <label>Key Register - All</label>
    <sharedTo>
        <group>Finance</group>
        <group>HR</group>
        <group>Managing_Director</group>
        <group>OPs_super</group>
        <group>Transport</group>
    </sharedTo>
</ListView>