force-app/main/default/objects/Company_Property__c/listViews/keys_brisbane.listView-meta.xml
<ListView>
    <fullName>keys_brisbane</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Location__c</columns>
    <columns>Currently_Assigned__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Company_Property__c.Keys</value>
    </filters>
    <filters>
        <field>Location__c</field>
        <operation>equals</operation>
        <value>Brisbane</value>
    </filters>
    <label>Brisbane Key Register</label>
    <sharedTo>
        <group>Finance</group>
        <group>HR</group>
        <group>Managing_Director</group>
    </sharedTo>
</ListView>