force-app/main/default/objects/Company_Property__c/listViews/keys_roma.listView-meta.xml
<ListView>
    <fullName>keys_roma</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Location__c</columns>
    <columns>Description__c</columns>
    <columns>Key_Type__c</columns>
    <columns>Currently_Assigned__c</columns>
    <columns>Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Company_Property__c.Keys</value>
    </filters>
    <filters>
        <field>Location__c</field>
        <operation>equals</operation>
        <value>Roma,Jackson</value>
    </filters>
    <label>Roma Office/Workshop Key Register</label>
    <sharedTo>
        <group>HR</group>
        <group>Purchasing</group>
    </sharedTo>
</ListView>