force-app/main/default/objects/Company_Property__c/listViews/Mobile_Devices_iphones.listView-meta.xml
<ListView>
    <fullName>Mobile_Devices_iphones</fullName>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>IMEI__c</columns>
    <columns>Serial__c</columns>
    <columns>Mobile__c</columns>
    <columns>Type__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>WD_Asset__c</columns>
    <columns>Unit__c</columns>
    <columns>Notes__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Company_Property__c.Mobile_Devices</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Obsolete (Binned/Sold)</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Company_Property__c.Mobile_Devices</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>contains</operation>
        <value>iphone</value>
    </filters>
    <label>Mobile Devices - Iphones</label>
    <sharedTo>
        <group>Finance</group>
    </sharedTo>
</ListView>