force-app/main/default/objects/Company_Property__c/listViews/Mobile_Devices_obselete.listView-meta.xml
<ListView>
    <fullName>Mobile_Devices_obselete</fullName>
    <columns>Type__c</columns>
    <columns>NAME</columns>
    <columns>Mobile__c</columns>
    <columns>Monthly_Payment__c</columns>
    <columns>Start_Date_of_Plan__c</columns>
    <columns>End_Date_of_Plan__c</columns>
    <columns>Sim__c</columns>
    <columns>Sim_Pin__c</columns>
    <columns>Sim_Puk__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Company_Property__c.Mobile_Devices</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Obsolete (Binned/Sold)</value>
    </filters>
    <label>(Mobile Devices - Iphones Plans Obselete</label>
    <sharedTo>
        <group>Finance</group>
    </sharedTo>
</ListView>